--- a/src/app/pages/core/information/information.component.html
+++ b/src/app/pages/core/information/information.component.html
@@ -1,10 +1,8 @@
-<div class="container">
-    <div class="row" style=" margin: 8%">
         <div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
             <img src="/assets/images/information.png" width="40%" height="60%" alt="information">
         </div>
 
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Frühstück von/bis</b>
@@ -12,7 +10,7 @@
             </div>
         </a>
 
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Checkin / Checkout</b>
@@ -20,7 +18,7 @@
             </div>
         </a>
 
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Hochzeiten</b>
@@ -28,7 +26,7 @@
             </div>
         </a>
 
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Museum</b>
@@ -36,19 +34,17 @@
             </div>
         </a>
 
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Getränke</b>
                 </div>
             </div>
         </a>
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
+        <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0  mb-2 border-color" style=" height: 120px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Bemerkung</b>
                 </div>
             </div>
         </a>
-
-    </div>
