--- a/src/app/pages/core/restaurant/restaurant.component.html
+++ b/src/app/pages/core/restaurant/restaurant.component.html
@@ -1,82 +1,73 @@
-<div class="container">
-    <div class="row" style=" margin: 8%">
-        <div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
-            <img src="/assets/images/chief.png" width="40%" height="70%" alt="chief">
+<div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
+    <img src="/assets/images/chief.png" width="40%" height="70%" alt="chief">
+</div>
+
+    <div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+        <div class="row font-size ">
+            <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+                <span class="font-size col-6">Da Franco <br>Ristaurante Pizzeria</span>
+            </a>
+            <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+            </app-rate-star>
         </div>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-        <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Da Franco <br>Ristaurante Pizzeria</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">La Cantina <br> Ristaurante</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Pizza Wagner <br>Pizzeria</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Aladin Grill <br>Döner Pizzeria</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Gasthaus Krone <br>Deutsch / Regional</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0  mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Kilic Restaurant <br>Döner Pizzeria</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0  mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Burgbergstube <br>Döner Pizzeria</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
     </div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">La Cantina <br> Ristaurante</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">Pizza Wagner <br>Pizzeria</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">Aladin Grill <br>Döner Pizzeria</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">Gasthaus Krone <br>Deutsch / Regional</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0  mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">Kilic Restaurant <br>Döner Pizzeria</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0  mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6">Burgbergstube <br>Döner Pizzeria</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
