--- a/src/app/pages/core/sightseeing/sightseeing.component.html
+++ b/src/app/pages/core/sightseeing/sightseeing.component.html
@@ -1,82 +1,75 @@
-<div class="container">
-    <div class="row" style=" margin: 8%">
-        <div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
-            <img src="/assets/images/castle.png" width="30%" height="70%" alt="castle">
+<div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
+    <img src="/assets/images/castle.png" width="30%" height="70%" alt="castle">
+</div>
+
+    <div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+        <div class="row font-size ">
+            <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+                <span class="font-size col-6 ps-2">Marien Kirche <br> Kirche / Kathedrale</span>
+            </a>
+            <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+            </app-rate-star>
         </div>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-        <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Marien Kirche <br> Kirche / Kathedrale</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Teppichmanufakt. <br> Geschäft</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Hohenburg <br>Burg</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Geotour <br>Aktivität</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0 align-item mb-2 border-color text-white"
-                style=" height: 70px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6">Wildpark Knüll <br>Aktivität Natur</span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0  mb-2 border-color text-white" style=" height: 120px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6"></span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
-        <a routerLink="/#" class="p-0" style="text-decoration: none;">
-            <div class="row m-0  mb-2 border-color text-white" style=" height: 120px; background-color: #C3996B;">
-                <div class="row font-size ">
-                    <span class="font-size col-6"></span>
-                    <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
-                    </app-rate-star>
-                </div>
-            </div>
-        </a>
-
     </div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2">Teppichmanufakt. <br> Geschäft</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2">Hohenburg <br>Burg</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2">Geotour <br>Aktivität</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+
+<div class="row m-0 align-item mb-2 border-color text-white" style=" height: 70px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2">Wildpark Knüll <br>Aktivität Natur</span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+
+<div class="row m-0  mb-2 border-color text-white" style=" height: 120px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2"></span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
+
+<div class="row m-0  mb-2 border-color text-white" style=" height: 120px; background-color: #C3996B;">
+    <div class="row font-size ">
+        <a routerLink="/" class="p-0 text-white" style="text-decoration: none; display: contents;">
+            <span class="font-size col-6 ps-2"></span>
+        </a>
+        <app-rate-star class="col-6" style="text-align: end; position: relative;" [starRating]="1">
+        </app-rate-star>
+    </div>
+</div>
