--- a/src/app/pages/core/checkin-out/checkin-out.component.html
+++ b/src/app/pages/core/checkin-out/checkin-out.component.html
@@ -1,124 +1,131 @@
-<div>
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #8BC63F; float: left;">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>1</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Rotkäppchen</b></span><br>
-            <span style="color: white; font-size: 15px;">Doppelzimmer <br> frei bis 05.08. <br> 99,- &euro;</span>
-        </div>
-
+<div class="row">
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #8BC63F; ">
+      <span style="color: white; font-size: 40px;"><b>1</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Rotkäppchen</b></span><br>
+      <span style="color: white; font-size: 15px;">Doppelzimmer <br> frei bis 05.08. <br> 99,- &euro;</span>
     </div>
+  </div>
 
 
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #8BC63F; float: right">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>1A</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Frau Holle</b></span><br>
-            <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 05.08. <br> 139,- &euro;</span>
-        </div>
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
+
+      <span style="color: white; font-size: 40px;"><b>1A</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Frau Holle</b></span><br>
+      <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 05.08. <br> 139,- &euro;</span>
     </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #EF3F36; ">
+
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>2</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"><b>Die Goldene Gans</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;">Suite mit Terrrasse </span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
+      <span class="ps-2" style="color: white; font-size: 15px; background-color: #303192; display: block;"> 119,-
+        &euro; </span><br>
+    </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #EF3F36;">
+
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>3</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"><b>Schneewittchen</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;">Doppelzi./Lodgia </span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"> 109,- &euro; </span><br>
+      <span style="color: white; font-size: 15px; background-color: #F5EC2F; display: block;"> &nbsp;</span>
+    </div>
+  </div>
+
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #EF3F36; ">
+
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>4</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"><b>Hänsel</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;">Einzelzimmer </span><br>
+      <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
+      <span class="ps-2 mb-1" style="color: white; font-size: 15px; background-color: #303192; display: block;"> 89,-
+        &euro; </span>
+      <span style="color: white; font-size: 15px; background-color: #F5EC2F; display: block;"> &nbsp;</span>
+    </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
+
+      <span style="color: white; font-size: 40px;"><b>5</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Grete</b></span><br>
+      <span style="color: white; font-size: 15px;">Einzelzimeer <br> frei bis 05.08. <br> 99,- &euro;</span>
+    </div>
+  </div>
+
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #F7941D; ">
+
+      <span style="color: white; font-size: 40px;"><b>6</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Dornroschen</b></span><br>
+      <span style="color: white; font-size: 15px;">Doppelzi./Lodgia <br> belegt bis 05.08. <br> 109,- &euro;</span>
+    </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #F7941D;">
+
+      <span style="color: white; font-size: 40px;"><b>6A</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Sterntaler</b></span><br>
+      <span style="color: white; font-size: 15px;">Apartment<br> belegt bis 05.08. <br> 129,- &euro;</span>
+    </div>
+  </div>
+
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: red; ">
+
+      <span style="color: white; font-size: 40px;"><b>7</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Rumpelstilzchen</b></span><br>
+      <span style="color: white; font-size: 15px;">Doppelzimmer <br> belegt bis 05.08. <br> 99,- &euro;</span>
+    </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
+
+      <span style="color: white; font-size: 40px;"><b>8</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Aschenputtel</b></span><br>
+      <span style="color: white; font-size: 15px;">Doppelzimmer<br> frei bis 05.08. <br> 129,- &euro;</span>
+    </div>
+  </div>
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: red; ">
+
+      <span style="color: white; font-size: 40px;"><b>8A</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Rapunzel</b></span><br>
+      <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 06.08. <br> 99,- &euro;</span>
+    </div>
+  </div>
+
+
+  <div class="col-md-6 col-sm-12 col-xl-2">
+    <div class="box-info" style=" height:190px ;background-color: red;">
+
+      <span style="color: white; font-size: 40px;"><b>9A</b></span><br>
+      <span style="color: white; font-size: 15px;"><b>Drosselbart</b></span><br>
+      <span style="color: white; font-size: 15px;">Apartment<br> belegt bis 06.08. <br> 99,- &euro;</span>
+    </div>
+  </div>
 </div>
-
-<div>
-    <div class="m-2" style="width: 160px; height:190px ;background-color: #EF3F36; float: left;">
-        <div>
-            <span class="ps-2" style="color: white; font-size: 40px;"><b>2</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"><b>Die Goldene Gans</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;">Suite mit Terrrasse </span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
-            <span class="ps-2" style="color: white; font-size: 15px; background-color: #303192; display: block;"> 119,-
-                &euro; </span><br>
-        </div>
-    </div>
-
-
-    <div class="m-2" style="width: 160px; height:190px ;background-color: #EF3F36; float: right">
-        <div>
-            <span class="ps-2" style="color: white; font-size: 40px;"><b>3</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"><b>Schneewittchen</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;">Doppelzi./Lodgia </span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"> 109,- &euro; </span><br>
-            <span style="color: white; font-size: 15px; background-color: #F5EC2F; display: block;"> &nbsp;</span>
-        </div>
-    </div>
-</div>
-
-<div>
-    <div class="m-2" style="width: 160px; height:190px ;background-color: #EF3F36; float: left;">
-        <div>
-            <span class="ps-2" style="color: white; font-size: 40px;"><b>4</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"><b>Hänsel</b></span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;">Einzelzimmer </span><br>
-            <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
-            <span class="ps-2 mb-1" style="color: white; font-size: 15px; background-color: #303192; display: block;"> 89,-
-                &euro; </span>
-            <span style="color: white; font-size: 15px; background-color: #F5EC2F; display: block;"> &nbsp;</span>
-        </div>
-    </div>
-
-
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #8BC63F; float: right">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>5</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Grete</b></span><br>
-            <span style="color: white; font-size: 15px;">Einzelzimeer <br> frei bis 05.08. <br> 99,- &euro;</span>
-        </div>
-    </div>
-</div>
-
-<div>
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #F7941D; float: left;">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>6</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Dornroschen</b></span><br>
-            <span style="color: white; font-size: 15px;">Doppelzi./Lodgia <br>  belegt bis 05.08. <br> 109,- &euro;</span>
-        </div>
-    </div>
-
-
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #F7941D; float: right">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>6A</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Sterntaler</b></span><br>
-            <span style="color: white; font-size: 15px;">Apartment<br>  belegt bis 05.08. <br> 129,- &euro;</span>
-        </div>
-    </div>
-</div>
-
-<!-- <div>
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: red; float: left;">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>7</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Rumpelstilzchen</b></span><br>
-            <span style="color: white; font-size: 15px;">Doppelzimmer <br>  belegt bis 05.08. <br> 99,- &euro;</span>
-        </div>
-    </div>
-
-
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: #8BC63F; float: right">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>8</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Aschenputtel</b></span><br>
-            <span style="color: white; font-size: 15px;">Doppelzimmer<br> frei bis 05.08. <br> 129,- &euro;</span>
-        </div>
-    </div>
-</div> -->
-
-<!-- <div>
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: red; float: left;">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>8A</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Rapunzel</b></span><br>
-            <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 06.08. <br> 99,- &euro;</span>
-        </div>
-    </div>
-
-
-    <div class="m-2 ps-2" style="width: 160px; height:190px ;background-color: red; float: right">
-        <div>
-            <span style="color: white; font-size: 40px;"><b>9A</b></span><br>
-            <span style="color: white; font-size: 15px;"><b>Drosselbart</b></span><br>
-            <span style="color: white; font-size: 15px;">Apartment<br> belegt bis 06.08. <br> 99,- &euro;</span>
-        </div>
-    </div>
-</div> -->
