--- a/src/app/pages/core/checkin-out/checkin-out.component.html
+++ b/src/app/pages/core/checkin-out/checkin-out.component.html
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #8BC63F; ">
-      <span style="color: white; font-size: 40px;"><b>1</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>1</b></span>
+
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Rotkäppchen</b></span><br>
       <span style="color: white; font-size: 15px;">Doppelzimmer <br> frei bis 05.08. <br> 99,- &euro;</span>
     </div>
@@ -11,7 +16,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
 
-      <span style="color: white; font-size: 40px;"><b>1A</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>1A</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Frau Holle</b></span><br>
       <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 05.08. <br> 139,- &euro;</span>
     </div>
@@ -21,7 +30,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #EF3F36; ">
 
-      <span class="ps-2" style="color: white; font-size: 40px;"><b>2</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>2</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span class="ps-2" style="color: white; font-size: 15px;"><b>Die Goldene Gans</b></span><br>
       <span class="ps-2" style="color: white; font-size: 15px;">Suite mit Terrrasse </span><br>
       <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
@@ -34,7 +47,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #EF3F36;">
 
-      <span class="ps-2" style="color: white; font-size: 40px;"><b>3</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>3</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span class="ps-2" style="color: white; font-size: 15px;"><b>Schneewittchen</b></span><br>
       <span class="ps-2" style="color: white; font-size: 15px;">Doppelzi./Lodgia </span><br>
       <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
@@ -48,7 +65,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #EF3F36; ">
 
-      <span class="ps-2" style="color: white; font-size: 40px;"><b>4</b></span><br>
+      <span class="ps-2" style="color: white; font-size: 40px;"><b>4</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="1"></app-multi-person>
+      </span>
+      <br>
       <span class="ps-2" style="color: white; font-size: 15px;"><b>Hänsel</b></span><br>
       <span class="ps-2" style="color: white; font-size: 15px;">Einzelzimmer </span><br>
       <span class="ps-2" style="color: white; font-size: 15px;"> belegt bis 05.08. </span><br>
@@ -62,7 +83,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
 
-      <span style="color: white; font-size: 40px;"><b>5</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>5</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="1"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Grete</b></span><br>
       <span style="color: white; font-size: 15px;">Einzelzimeer <br> frei bis 05.08. <br> 99,- &euro;</span>
     </div>
@@ -73,7 +98,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #F7941D; ">
 
-      <span style="color: white; font-size: 40px;"><b>6</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>6</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Dornroschen</b></span><br>
       <span style="color: white; font-size: 15px;">Doppelzi./Lodgia <br> belegt bis 05.08. <br> 109,- &euro;</span>
     </div>
@@ -83,7 +112,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #F7941D;">
 
-      <span style="color: white; font-size: 40px;"><b>6A</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>6A</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Sterntaler</b></span><br>
       <span style="color: white; font-size: 15px;">Apartment<br> belegt bis 05.08. <br> 129,- &euro;</span>
     </div>
@@ -94,7 +127,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: red; ">
 
-      <span style="color: white; font-size: 40px;"><b>7</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>7</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Rumpelstilzchen</b></span><br>
       <span style="color: white; font-size: 15px;">Doppelzimmer <br> belegt bis 05.08. <br> 99,- &euro;</span>
     </div>
@@ -104,7 +141,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: #8BC63F;">
 
-      <span style="color: white; font-size: 40px;"><b>8</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>8</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Aschenputtel</b></span><br>
       <span style="color: white; font-size: 15px;">Doppelzimmer<br> frei bis 05.08. <br> 129,- &euro;</span>
     </div>
@@ -113,7 +154,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: red; ">
 
-      <span style="color: white; font-size: 40px;"><b>8A</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>8A</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Rapunzel</b></span><br>
       <span style="color: white; font-size: 15px;">Apartment <br> belegt bis 06.08. <br> 99,- &euro;</span>
     </div>
@@ -123,7 +168,11 @@
   <div class="col-md-6 col-sm-12 col-xl-2">
     <div class="box-info" style=" height:190px ;background-color: red;">
 
-      <span style="color: white; font-size: 40px;"><b>9A</b></span><br>
+      <span style="color: white; font-size: 40px;"><b>9A</b></span>
+      <span style="color: white; font-size: 40px; float: right; padding-top: 13px;">
+        <app-multi-person [rating]="2"></app-multi-person>
+      </span>
+      <br>
       <span style="color: white; font-size: 15px;"><b>Drosselbart</b></span><br>
       <span style="color: white; font-size: 15px;">Apartment<br> belegt bis 06.08. <br> 99,- &euro;</span>
     </div>
