--- a/src/app/pages/core/free-rooms/checkin/checkin.component.html
+++ b/src/app/pages/core/free-rooms/checkin/checkin.component.html
@@ -29,8 +29,13 @@
     <div class="col-5 text-white font-size text-align">
         <b>Rotkäppchen</b><br>Doppelzimmer / 1.OG
     </div>
-    <div class="col-4 text-white font-size text-align">
-        99,- &euro;
+    <div class="col-4 text-white font-size text-align" style="text-align: right;">
+        <div>
+            <app-multi-person style="float: right;" [rating]="2"></app-multi-person>
+        </div><br>
+        <span>
+            99,- &euro;
+        </span>
     </div>
 </div>
 
